# sensitive-server

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
configuration/: base.yml  logger.yml
migrations/2020-12-09-081543_create_sentisitive_words/: down.sql  up.sql
migrations/2020-12-09-081555_create_sentisitive_regular/: down.sql  up.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
src/application/: Cargo.toml
src/application/src/: lib.rs  sensitive.rs
src/domain/: Cargo.toml  connection.rs
src/domain/src/: connection.rs  errors.rs  lib.rs
src/domain/src/regular/: errors.rs  mod.rs  models.rs
src/domain/src/words/: errors.rs  models.rs  repositories.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: lib.rs  models.rs  repository.rs  schema.rs
src/infrastructure/src/queries/: mod.rs  regular.rs  words.rs
src/infrastructure/tests/: conduit_regular.rs  conduit_word.rs
src/infrastructure/tests/helpers/: generate.rs  mod.rs  test_db.rs
src/web/: Cargo.toml  configuration.rs
src/web/src/: app.rs  configuration.rs  lib.rs  main.rs
src/web/src/controller/: mod.rs  sensitive.rs
