[package]
name = "sensitive-server-domain"
version = "0.1.0"
authors = ["whiteCcinn <471113744@qq.com>"]
edition = "2018"
description = "domain layer"
repository = "https://github.com/whiteCcinn/sensitive-server"

[lib]
name = "sensitive_server_domain"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version= "1", features = ["derive"] }

[dev-dependencies]
application = { package = "sensitive-server-web", path = "../web"}
db = { package = "sensitive-server-infrastructure", path = "../infrastructure" }
diesel = { version = "1.4", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8"
fake = "1.2.2"