[package]
name = "sensitive-server-web"
version = "0.1.0"
authors = ["whiteCcinn <471113744@qq.com>"]
edition = "2018"
description = "port layer"
repository = "https://github.com/whiteCcinn/sensitive-server"

[[bin]]
name = "sensitive_server"
path = "src/main.rs"

[dependencies]
# parse config
config = "0.10"
# serialization
serde = { version = "1.0", features = ["derive"] }
## logger
log="0.4"
log4rs="0.13"
# coroutine core
async-std = { version = "1.6.0", features = ["attributes"] }
# application layer
application = { package = "sensitive-server-application", path = "../application" }
# domain layer
domain = { package = "sensitive-server-domain", path = "../domain" }
# infrastructure layer
infrastructure = { package = "sensitive-server-infrastructure", path = "../infrastructure" }
